Feat: add station CRUD operation
